cambiando borde a primer esquema

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -23,6 +23,6 @@
   width: 95%;
   float: left;
   height: 180px;
-  border: 1px solid #000;
+  border: 1px solid #77787C;
   background-color: #77787C;
 }
